Fixed text overflow on `info` and `code` bars

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -229,6 +229,8 @@ info, code {
 	color: var(--overlay-foreground-5);
 	opacity: var(--min-opacity);
 
+	overflow-wrap: break-word;
+
 	will-change: transition;
 	transition: opacity var(--style-animation);
 }
